# meshtools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
checkholes/: CMakeLists.txt  holefill.cpp  holefill.h  main.cpp
cmake/: cleanCppExtensions.cmake  projectNaming.cmake
common-lib/: CMakeLists.txt
common-lib/include/: meshtype.h
meshconvert/: CMakeLists.txt  main.cpp
meshgui/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  helper.h  main.cpp  shader.cpp  shader.h
meshgui/GLAD/include/glad/: glad.h
meshgui/GLAD/src/: glad.c
